kubernetes/backend/backend-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-v2-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-v2

  template:
    metadata:
      labels:
        app: backend-v2

    spec:
      containers:
        - name: backend-v2
          image: sujaltiwari27/astro-backend:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/v1/healthCheck
              port: 3000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/v1/healthCheck
              port: 3000

            initialDelaySeconds: 15
            periodSeconds: 20
