kubernetes/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: sujaltiwari27/astro-backend:v1

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/v1/healthCheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/v1/healthCheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
