kubernetes/backend/Service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
