kubernetes/backend/backend-v2-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-v2-service

spec:
  selector:
    app: backend-v2

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
